--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -112,6 +112,7 @@ jobs:
 #        - deb
 #        - rpm
 #        - linux_zip
+#        - linux_tar
 #        - snap
 #        - msix
 #        - exe
@@ -1263,6 +1264,76 @@ jobs:
         run: |
           RELEASE="$([[ "$ENV" == "staging" ]] && echo "$VERSION_SUFFIX.pre" || echo "$VERSION_SUFFIX")"
           gh release upload "$RELEASE" ./*.linux.zip
+        env:
+          ENV: ${{ github.event.inputs.env }}
+          VERSION_SUFFIX: "${{ needs.create_release.outputs.version }}+${{ needs.create_release.outputs.commit_count }}"
+          VERSION: ${{ needs.create_release.outputs.version }}
+          GH_TOKEN: ${{ secrets.PG_RELEASE_TOKEN }}
+
+      - name: Clean up
+        if: ${{ always() }}
+        run: |
+          rm -f .env
+
+  linux_tar:
+    name: Create tar
+    runs-on: ubuntu-latest
+    needs:
+      - create_release
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install dependencies for Linux
+        run: |
+          sudo apt update
+          sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
+          sudo apt install -y p7zip-full p7zip-rar
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          flutter-version: '3.19.6'
+
+      - name: Configure .env
+        run: |
+          ENV_BASE64="$([[ "$ENV" == "staging" ]] && echo "$ENV_STG_BASE64" || echo "$ENV_PROD_BASE64")"
+          echo "$ENV_KEY" | base64 --decode > .env
+        env:
+          ENV: ${{ github.event.inputs.env }}
+          ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64 }}
+          ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64 }}
+
+      - name: Flutter doctor -v
+        run: flutter doctor -v
+
+      - name: Install flutter dependencies
+        run: flutter pub get
+
+      - name: Build flutter
+        run: flutter build linux --dart-define-from-file=.env --build-number=$COMMIT_COUNT --target-platform=linux-x64
+        env:
+          COMMIT_COUNT: ${{ needs.create_release.outputs.commit_count }}
+
+      - name: Build tar
+        run: |
+          baseDir=$(pwd)
+          archiveName=picguard.linux.tar.gz
+          cd build/linux/x64/release/bundle || exit
+          tar -czaf $archiveName ./*
+          mv $archiveName $GITHUB_WORKSPACE/
+
+      # Package the build.
+      - name: Copy build for zip
+        run: ls -la
+
+      - name: Show gh info
+        run: gh --version
+
+      - name: Upload assets
+        run: |
+          RELEASE="$([[ "$ENV" == "staging" ]] && echo "$VERSION_SUFFIX.pre" || echo "$VERSION_SUFFIX")"
+          gh release upload "$RELEASE" ./*.linux.tar.gz
         env:
           ENV: ${{ github.event.inputs.env }}
           VERSION_SUFFIX: "${{ needs.create_release.outputs.version }}+${{ needs.create_release.outputs.commit_count }}"
