--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -220,3 +220,59 @@ jobs:
         if: ${{ always() }}
         run: |
           rm -f .env
+
+  tar:
+    name: Create tar
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install dependencies for Linux
+        run: |
+          sudo apt update
+          sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
+          sudo apt install -y p7zip-full p7zip-rar
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          flutter-version: '3.19.6'
+
+      - name: Configure .env
+        run: |
+          echo "$ENV_KEY" | base64 --decode > .env
+        env:
+          ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
+
+      - name: Flutter doctor -v
+        run: flutter doctor -v
+
+      - name: Install flutter dependencies
+        run: flutter pub get
+
+      - name: Build flutter
+        run: flutter build linux --dart-define-from-file=.env --target-platform=linux-x64
+
+      - name: Build tar
+        run: |
+          baseDir=$(pwd)
+          archiveName=picguard.linux.tar.gz
+          cd build/linux/x64/release/bundle || exit
+          tar -czaf $archiveName ./*
+          mv $archiveName "$baseDir"/
+
+      # Package the build.
+      - name: Copy build for zip
+        run: ls -la
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: linux-tar-artifact
+          path: |
+            ./picguard.linux.tar.gz
+
+      - name: Clean up
+        if: ${{ always() }}
+        run: |
+          rm -f .env
