--- a/.github/workflows/test-snapcraft.yml
+++ b/.github/workflows/test-snapcraft.yml
@@ -44,7 +44,8 @@ jobs:
       - name: Build snap
         run: |
           # https://snapcraft.io/docs/flutter-applications
-          snapcraft --output picguard.snap
+          version=$(yq '.version' pubspec.yaml)
+          snapcraft --output "picguard_"$version"_linux_x86_64.snap"
 
       # Package the build.
       - name: Copy build for snap
